# QimBrowser

./: .gitignore  CMakeLists.txt  README.md
src/: EffArray.hpp  QimBaseWidget.hpp  QimBrowserMainWindow.cpp  QimBrowserMainWindow.hpp  QimBrowserRootWidget.cpp  QimBrowserRootWidget.hpp  QimTypes.hpp  main.cpp
